--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
           <span class="point"> · </span>
           <span>&copy; 2015 Xuxiaoqing</span>
           <span class="point"> · </span>
-          <span>Designed by <a href="https://github.com/Gaohaoyang">HyG</a></span>
+          <span>Designed by <a href="https://github.com/Gaohaoyang">Gaohaoyang</a></span>
 
       </div>
     </div>
