update old page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,14 @@
     </div>
 
     
+    <div id="top" data-toggle="tooltip" data-placement="left" title="回到顶部">
+      <a href="javascript:;">
+        <div class="arrow"></div>
+        <div class="stick"></div>
+      </a>
+    </div>
 
-
- 
+    {% include footer.html %}
     
     
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
