update chrome and eclipse post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,11 @@
     </div>
 
     {% include footer.html %}
-    
-    
+
+
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
   <script type="text/javascript">
-    var duoshuoQuery = {short_name:"xxqblog"};
+    var duoshuoQuery = {short_name:"hygblog"};
     (function() {
       var ds = document.createElement('script');
       ds.type = 'text/javascript';ds.async = true;
@@ -49,6 +49,5 @@
       addBlankTargetForLinks();
     });
   </script>
-  
   </body>
 </html>
