--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,9 +11,9 @@ layout: default
     </article>
 </div>
 <div class="post-area post comment">
-      <!-- 多说评论框 start -->
-      
-      <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="snowdream1314.github.io{{ page.url }}"></div>
-      
-      <!-- 多说评论框 end -->
+    <!-- 多说评论框 start -->
+    
+    <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="gaohaoyang.github.io{{ page.url }}"></div>
+    
+    <!-- 多说评论框 end -->
 </div>
