--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 <div class="post-area post">
-    
+    <header>
+        <h1>{{ page.title }}</h1>
+    </header>
+    <hr>
     <article class="page-content">
         {{ content }}
     </article>
